@@ -299,6 +299,7 @@
 //------------------------------------------------------------------------------
 .filters, .panel
   :background snow
+  :margin 0px 0px 10px 0px
   :padding 6px 8px 6px 8px
   :-moz-border-radius 4px
   :-webkit-border-radius 4px
@@ -314,24 +315,23 @@
     :font-size 12px
     :list-style none
     :padding 2px 0px 3px 0px
-    tt
-      :font-size 11px
     dt
       :float right
       :font
         :size 11px
         :weight bold
+    tt
+      :font-size 11px
     &.last
       :border-bottom none
   .caption
-    :background #dfdfdf
-    :border-bottom 1px silver solid
-    :color #344152
+    :border-bottom 1px grey solid
+    :color navy
     :font
-      :size 11px
+      :size 12px
       :weight bold
     :margin 4px 0px 2px 0px
-    :padding 2px 0px 2px 4px
+    :padding 2px 0px 2px 0px
 
 .selector
   :color black
