@@ -250,6 +250,7 @@
 
 .filters, .panel {
   background: snow;
+  margin: 0px 0px 10px 0px;
   padding: 6px 8px 6px 8px;
   -moz-border-radius: 4px;
   -webkit-border-radius: 4px; }
@@ -264,22 +265,21 @@
   font-size: 12px;
   list-style: none;
   padding: 2px 0px 3px 0px; }
-  .panel li tt {
-    font-size: 11px; }
   .panel li dt {
     float: right;
     font-size: 11px;
     font-weight: bold; }
+  .panel li tt {
+    font-size: 11px; }
   .panel li.last {
     border-bottom: none; }
 .panel .caption {
-  background: #dfdfdf;
-  border-bottom: 1px silver solid;
-  color: #344152;
-  font-size: 11px;
+  border-bottom: 1px grey solid;
+  color: navy;
+  font-size: 12px;
   font-weight: bold;
   margin: 4px 0px 2px 0px;
-  padding: 2px 0px 2px 4px; }
+  padding: 2px 0px 2px 0px; }
 
 .selector {
   color: black;
