@@ -4,6 +4,14 @@ It does not matter how slowly you go as long as you do not stop.
 First they ignore you, then they laugh at you, then they fight you,
 then you win. –- Mahatma Gandhi
 
+Sun, Apr 12, 2009
+---------------------------------------------------------------------
+- Initial implementation of recently visited items.
+
+Sat, Apr 11, 2009
+---------------------------------------------------------------------
+- Lovely IRS weekend.
+
 Fri, Apr 10, 2009
 ---------------------------------------------------------------------
 - Added activity tracking for recently viewed items.
